deploy: 4fb05215f7644d578a4579eb5052019d31795366

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-28 10:45 -->
+    <!-- Built with 11ty - 2024-10-28 14:50 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>About the project | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1730112326">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1730127038">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1730112326"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1730127038"></script>
 
     <style>
 
@@ -95,6 +95,8 @@
 <p><img src="../assets/img/about/Image_for_about_page.jpg" alt="Detail from Mitchell 1755 map" class="map_page_image"></p>
 <h2>Using the kinetic map</h2>
 <p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images. The second mode allows you to explore freely, using a set of filters to see information captured from specific maps.</p>
+<h2 id="stories-guide">Guide to Stories</h2>
+<p>test</p>
 <h2>The Project Team</h2>
 <p>This project is part of 'Brightening the Covenant Chain: Revealing Cultures of Diplomacy between the Crown and the Iroquois Confederacy'. Arts and Humanities Research Council of the United Kingdom, Standard Research Grant AH/T006099/1, Principal Investigator: Professor Joy Porter. Project Team: Charles Prior (project lead, author of map stories); Dr Matthias Wong (PDRA - data mining); Jenson Morse (Project Intern); King’s Digital Lab (Paul Caton, Neil Jakeman, Elliot Hall, Tiffany Ong, Lucie Hao); Project review held at RAI with input from panel: Max Edelson, Chad Anderson, Hayden Haynes (Seneca Nation), Saliha Belmessous, Cassie Wise, Miriam Davis Rosenbaum (National Indian Education Association).</p>
 
