deploy: 07f3722ad2ef988516bb1087c7cedb311e8bf092

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-28 16:23 -->
+    <!-- Built with 11ty - 2024-10-28 17:09 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>About the project | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1730132617">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1730135366">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1730132617"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1730135366"></script>
 
     <style>
 
@@ -94,11 +94,108 @@
 <p>We wanted to be able to show not only the layers of information that were presented in maps of North America over time, but also how  historic maps consistently revealed the juxtaposition of Native and colonial presence. Since no database existed for this, our first task was to build one. To do this we selected a range of historic maps that, to us, provided the best respresentations of common worlds; these were geo-rectified over a base map and then data points from each map were selected and recorded. These data points included settlements and placenames, both Indigenous and European, as well as rivers and land pathways. A consistent feature of these early maps is that Indigenous homelands are represented by printed words and phrases but their physical extent, unlike that of colonies, are not demarcated by boundary lines. This is starkly illustrated in the image below (an excerpt from John Mitchell's iconic map of 1755). Numerous words and phrases indicate areas associated with particular peoples and Native Nations, and the map's largest label - which arcs across the centre of the map, is 'The Six Nations, or Iroquois'. In the absence of printed boundaries we captured the mapmakers' understandings of the relative locations of Native nations and peoples by recording the position and extent of the associated text segments on the map. It is important to realise, then, that when our map displays a polygon with the associated text &quot;Senekas&quot; this polygon is not delimiting a geographical area but rather the position and alignment of a printed word on the map.</p>
 <p><img src="../assets/img/about/Image_for_about_page.jpg" alt="Detail from Mitchell 1755 map" class="map_page_image"></p>
 <h2>Using the kinetic map</h2>
-<p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images. The second mode allows you to explore freely, using a set of filters to see information captured from specific maps.</p>
-<h2 id="stories-guide">Guide to Stories</h2>
-<p>test</p>
+<p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images - see <strong>Stories guide</strong> below for display details). The second mode allows you to explore freely, using a set of filters to see information captured from specific maps.</p>
 <h2>The Project Team</h2>
 <p>This project is part of 'Brightening the Covenant Chain: Revealing Cultures of Diplomacy between the Crown and the Iroquois Confederacy'. Arts and Humanities Research Council of the United Kingdom, Standard Research Grant AH/T006099/1, Principal Investigator: Professor Joy Porter. Project Team: Charles Prior (project lead, author of map stories); Dr Matthias Wong (PDRA - data mining); Jenson Morse (Project Intern); King’s Digital Lab (Paul Caton, Neil Jakeman, Elliot Hall, Tiffany Ong, Lucie Hao); Project review held at RAI with input from panel: Max Edelson, Chad Anderson, Hayden Haynes (Seneca Nation), Saliha Belmessous, Cassie Wise, Miriam Davis Rosenbaum (National Indian Education Association).</p>
+<h2>Stories guide</h2>
+<p>###OVERVIEW###</p>
+<p>Display: Blank map - no features displayed
+Text: &quot;Overview&quot; then &quot;For a long time, American history was ...&quot;</p>
+<p>Display: Blank map - no features displayed
+Text begins: &quot;'We live encompassed with people...'&quot;</p>
+<p>###1 - INTRODUCTION###</p>
+<p>Display: Indigenous &amp; European settlements and placenames [Mitchell 1755]
+Text: &quot;Introduction&quot;</p>
+<p>Display: (unchanged)
+Text begins: “Maps of early America do not tell the whole truth ...”</p>
+<p>Display: European settlements [Mitchell 1755]
+Text begins: “Settlement was fragmented and confined to a narrow strip ...”</p>
+<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
+Text begins: “While the common worlds of . . .”</p>
+<p>###2 - HOMELANDS###</p>
+<p>Display: selection of Indigenous-related annotations [Mitchell 1755], transforming from normalized spelling to Indigenous versions
+Text: &quot;Homelands&quot;</p>
+<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
+Text begins: “American history begins with the deep history of the land ...”</p>
+<p>Display: Rivers [Mitchell 1755]; Indigenous &amp; European settlements and placenames [all maps]
+Text begins: “The Indigenous landscape was more than a homeland ...”</p>
+<p>Display: Principal rivers, Indigenous settlements, placenames and council fires [all maps]
+Text begins: “The land was political ....”</p>
+<p>Display: Charlestown [Mitchell 1755]; Catawba territory (source: https://native-land.ca/maps/territories/catawba/)
+Text begins: “Indigenous people were map makers ...”</p>
+<p>Display: Haudenosaunee-related annotations [Mitchell 1755]
+Text begins: “Haudenosaunee can be translated as ‘the whole house’ ...”</p>
+<p>Display: Haudenosaunee-related annotation &quot;Iroquois&quot; and colonial domains Virginia, Pennsylvania, New York [Mitchell 1755];
+Text begins: “British mapmakers took care in noting ...”</p>
+<p>Display: as above + other Indigenous-related annotations [Mitchell 1755]
+Text begins: “Yet this was not a wholly peaceful landscape”</p>
+<p>Display: Indigenous settlements, principal rivers  [all maps]
+Text begins: “The United Colonies emerged as a new power ...”</p>
+<p>Display: Indigenous &amp; European settlements, council fires [all maps]; Haudenosaunee-related annotations [Cary 1783, Bradley 1796]
+Text begins: “The village worlds of the Haudenosaunee were broken apart ...”</p>
+<p>###3 - PATHWAYS###</p>
+<p>Display: Two animations - principal rivers followed by pathway &amp; council fires  [Mitchell 1755]
+Text: &quot;Pathways&quot;</p>
+<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
+Text begins:“For the Haudenosaunee, the path was a powerful metaphor ...”</p>
+<p>Display:  Pathways, principal rivers [all maps]; Indigenous &amp; European settlements [Mitchell 1755]
+Text begins:“Pathways were conduits of communication”</p>
+<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
+Text begins: “For the geographer Lewis Evans ...”</p>
+<p>Display: Rivers [Bradley 1796]; Indigenous &amp; European settlements [Mitchell 1755]
+Text begins: “Washington found himself serving as a messenger ...”</p>
+<p>Display: Rivers [Bradley 1796]
+Text begins: “As Washington learned, rivers were the highways  ...”</p>
+<p>Display: Rivers, pathways [Bradley 1796]
+Text begins: “Europeans found their way along single file ...”</p>
+<p>###4 - VILLAGERS, SETTLERS###</p>
+<p>Display: animation of council fire sites [Mitchell 1755]
+Text: &quot;Villagers, Settlers&quot;</p>
+<p>Display: Indigenous settlements and placenames [Foster 1677]
+Text begins: “European claims to the conquest of the ‘new world’ ...”</p>
+<p>Display: Indigenous settlements [White 1590]
+Text begins: “The English settled among Indigenous nations ...”</p>
+<p>Display: Hudson River, Indigenous &amp; European settlements [Foster 1677]
+Text begins: “A century after the creation of White’s map ...”</p>
+<p>Display: Principal rivers, Haudenosaunee settlements [all maps]
+Text begins: “The creation of new colonies disrupted the flows ...”</p>
+<p>Display: Principal rivers, Indigenous &amp; European settlements [Evans 1752]
+Text begins: “Settlers pushed out of towns and villages  ...”</p>
+<p>Display: Border lines [Mitchell 1755]
+Text begins: “As British traders, diplomats and settlers ...”</p>
+<p>Display: Border lines [Buell 1784]
+Text begins: “Increasingly, maps portrayed colonies as ...”</p>
+<p>Display: Mississippi River system, Indigenous settlements [Mitchell 1755, Hutchins 1778]
+Text begins: “Jefferies map is concerned with larger spaces ...”</p>
+<p>Display: Pathways, Indigenous &amp; European settlements, council fires [Bradley 1796]
+Text begins: “Abraham Bradley’s A Map of the United States shows ...”</p>
+<p>Display: Pathways, European settlements [Bradley 1796]
+Text begins: “Bradley’s map shows state-driven colonialism  ...”</p>
+<p>###5 - LINES###</p>
+<p>Display: four animations of expanding border lines [Seller 1676; Burghers 1738; Mitchell 1755; Bradley 1796]
+Text: &quot;Lines&quot;</p>
+<p>Display: Virginia [Mitchell 1755]
+Text begins: “The royal charters that created colonies out of ...”</p>
+<p>Display: Colonial domains [Burghers 1738]
+Text begins: “As settlement expanded into the western reaches ...”</p>
+<p>Display: Pathways, descriptions, European settlements [Evans 1752]
+Text begins: “The most detailed maps focused on areas ...”</p>
+<p>Display: Indigenous settlements, colonial domains [Mitchell 1755]
+Text begins: “William Herbert’s ‘new’ and ‘accurate’ map  ...”</p>
+<p>Display: European, Indigenous and Haudenosaunee-related annotations [Mitchell 1755]
+Text begins: “The charter borders of colonies are shown at scale ...”</p>
+<p>Display: Colonial domains [Burghers 1738] with 1763 Royal Proclamation line added
+Text begins: “The Royal Proclamation of 1763 created  ...”</p>
+<p>Display: (unchanged)
+Text begins: “A letter in the St. James’ Chronicle ...”</p>
+<p>Display: Colonial border lines [all maps]
+Text begins: “Later maps used European treaties to produce ...”</p>
+<p>Display: Colonial border lines [Buell 1784]
+Text begins: “Where colonies sat near Indigenous nations. ...”</p>
+<p>Display: Connecticut [Buell 1784]
+Text begins: “The transition between British Empire and American territorial republic  ...”</p>
+<p>Display: Colonial border lines [Bradley 1796], Indigenous settlements [Mitchell 1755]
+Text begins: “The names and location of Indigenous nations  ...”</p>
 
             </div>
 
