deploy: cd8a7b31e34d5e01ee32941731606789e909483d

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-28 17:11 -->
+    <!-- Built with 11ty - 2024-10-29 12:15 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>About the project | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1730135486">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1730204156">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1730135486"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1730204156"></script>
 
     <style>
 
@@ -98,104 +98,57 @@
 <h2>The Project Team</h2>
 <p>This project is part of 'Brightening the Covenant Chain: Revealing Cultures of Diplomacy between the Crown and the Iroquois Confederacy'. Arts and Humanities Research Council of the United Kingdom, Standard Research Grant AH/T006099/1, Principal Investigator: Professor Joy Porter. Project Team: Charles Prior (project lead, author of map stories); Dr Matthias Wong (PDRA - data mining); Jenson Morse (Project Intern); King’s Digital Lab (Paul Caton, Neil Jakeman, Elliot Hall, Tiffany Ong, Lucie Hao); Project review held at RAI with input from panel: Max Edelson, Chad Anderson, Hayden Haynes (Seneca Nation), Saliha Belmessous, Cassie Wise, Miriam Davis Rosenbaum (National Indian Education Association).</p>
 <h2>Stories guide</h2>
-<h3>OVERVIEW</h3>
-<p>Display: Blank map - no features displayed
-Text: &quot;Overview&quot; then &quot;For a long time, American history was ...&quot;</p>
-<p>Display: Blank map - no features displayed
-Text begins: &quot;'We live encompassed with people...'&quot;</p>
-<h3>1 - INTRODUCTION</h3>
-<p>Display: Indigenous &amp; European settlements and placenames [Mitchell 1755]
-Text: &quot;Introduction&quot;</p>
-<p>Display: (unchanged)
-Text begins: “Maps of early America do not tell the whole truth ...”</p>
-<p>Display: European settlements [Mitchell 1755]
-Text begins: “Settlement was fragmented and confined to a narrow strip ...”</p>
-<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
-Text begins: “While the common worlds of . . .”</p>
-<h3>2 - HOMELANDS</h3>
-<p>Display: selection of Indigenous-related annotations [Mitchell 1755], transforming from normalized spelling to Indigenous versions
-Text: &quot;Homelands&quot;</p>
-<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
-Text begins: “American history begins with the deep history of the land ...”</p>
-<p>Display: Rivers [Mitchell 1755]; Indigenous &amp; European settlements and placenames [all maps]
-Text begins: “The Indigenous landscape was more than a homeland ...”</p>
-<p>Display: Principal rivers, Indigenous settlements, placenames and council fires [all maps]
-Text begins: “The land was political ....”</p>
-<p>Display: Charlestown [Mitchell 1755]; Catawba territory (source: https://native-land.ca/maps/territories/catawba/)
-Text begins: “Indigenous people were map makers ...”</p>
-<p>Display: Haudenosaunee-related annotations [Mitchell 1755]
-Text begins: “Haudenosaunee can be translated as ‘the whole house’ ...”</p>
-<p>Display: Haudenosaunee-related annotation &quot;Iroquois&quot; and colonial domains Virginia, Pennsylvania, New York [Mitchell 1755];
-Text begins: “British mapmakers took care in noting ...”</p>
-<p>Display: as above + other Indigenous-related annotations [Mitchell 1755]
-Text begins: “Yet this was not a wholly peaceful landscape”</p>
-<p>Display: Indigenous settlements, principal rivers  [all maps]
-Text begins: “The United Colonies emerged as a new power ...”</p>
-<p>Display: Indigenous &amp; European settlements, council fires [all maps]; Haudenosaunee-related annotations [Cary 1783, Bradley 1796]
-Text begins: “The village worlds of the Haudenosaunee were broken apart ...”</p>
-<h3>3 - PATHWAYS</h3>
-<p>Display: Two animations - principal rivers followed by pathway &amp; council fires  [Mitchell 1755]
-Text: &quot;Pathways&quot;</p>
-<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
-Text begins:“For the Haudenosaunee, the path was a powerful metaphor ...”</p>
-<p>Display:  Pathways, principal rivers [all maps]; Indigenous &amp; European settlements [Mitchell 1755]
-Text begins:“Pathways were conduits of communication”</p>
-<p>Display: Pathways, Indigenous &amp; European settlements [Mitchell 1755]
-Text begins: “For the geographer Lewis Evans ...”</p>
-<p>Display: Rivers [Bradley 1796]; Indigenous &amp; European settlements [Mitchell 1755]
-Text begins: “Washington found himself serving as a messenger ...”</p>
-<p>Display: Rivers [Bradley 1796]
-Text begins: “As Washington learned, rivers were the highways  ...”</p>
-<p>Display: Rivers, pathways [Bradley 1796]
-Text begins: “Europeans found their way along single file ...”</p>
-<h3>4 - VILLAGERS, SETTLERS</h3>
-<p>Display: animation of council fire sites [Mitchell 1755]
-Text: &quot;Villagers, Settlers&quot;</p>
-<p>Display: Indigenous settlements and placenames [Foster 1677]
-Text begins: “European claims to the conquest of the ‘new world’ ...”</p>
-<p>Display: Indigenous settlements [White 1590]
-Text begins: “The English settled among Indigenous nations ...”</p>
-<p>Display: Hudson River, Indigenous &amp; European settlements [Foster 1677]
-Text begins: “A century after the creation of White’s map ...”</p>
-<p>Display: Principal rivers, Haudenosaunee settlements [all maps]
-Text begins: “The creation of new colonies disrupted the flows ...”</p>
-<p>Display: Principal rivers, Indigenous &amp; European settlements [Evans 1752]
-Text begins: “Settlers pushed out of towns and villages  ...”</p>
-<p>Display: Border lines [Mitchell 1755]
-Text begins: “As British traders, diplomats and settlers ...”</p>
-<p>Display: Border lines [Buell 1784]
-Text begins: “Increasingly, maps portrayed colonies as ...”</p>
-<p>Display: Mississippi River system, Indigenous settlements [Mitchell 1755, Hutchins 1778]
-Text begins: “Jefferies map is concerned with larger spaces ...”</p>
-<p>Display: Pathways, Indigenous &amp; European settlements, council fires [Bradley 1796]
-Text begins: “Abraham Bradley’s A Map of the United States shows ...”</p>
-<p>Display: Pathways, European settlements [Bradley 1796]
-Text begins: “Bradley’s map shows state-driven colonialism  ...”</p>
-<h3>5 - LINES</h3>
-<p>Display: four animations of expanding border lines [Seller 1676; Burghers 1738; Mitchell 1755; Bradley 1796]
-Text: &quot;Lines&quot;</p>
-<p>Display: Virginia [Mitchell 1755]
-Text begins: “The royal charters that created colonies out of ...”</p>
-<p>Display: Colonial domains [Burghers 1738]
-Text begins: “As settlement expanded into the western reaches ...”</p>
-<p>Display: Pathways, descriptions, European settlements [Evans 1752]
-Text begins: “The most detailed maps focused on areas ...”</p>
-<p>Display: Indigenous settlements, colonial domains [Mitchell 1755]
-Text begins: “William Herbert’s ‘new’ and ‘accurate’ map  ...”</p>
-<p>Display: European, Indigenous and Haudenosaunee-related annotations [Mitchell 1755]
-Text begins: “The charter borders of colonies are shown at scale ...”</p>
-<p>Display: Colonial domains [Burghers 1738] with 1763 Royal Proclamation line added
-Text begins: “The Royal Proclamation of 1763 created  ...”</p>
-<p>Display: (unchanged)
-Text begins: “A letter in the St. James’ Chronicle ...”</p>
-<p>Display: Colonial border lines [all maps]
-Text begins: “Later maps used European treaties to produce ...”</p>
-<p>Display: Colonial border lines [Buell 1784]
-Text begins: “Where colonies sat near Indigenous nations. ...”</p>
-<p>Display: Connecticut [Buell 1784]
-Text begins: “The transition between British Empire and American territorial republic  ...”</p>
-<p>Display: Colonial border lines [Bradley 1796], Indigenous settlements [Mitchell 1755]
-Text begins: “The names and location of Indigenous nations  ...”</p>
+<p>OVERVIEW</p>
+<p>0.0 <strong>Display</strong>: Blank map - no features displayed. <strong>Text</strong>: &quot;Overview&quot; then &quot;For a long time, American history was ...&quot;.</p>
+<p>0.1 <strong>Display</strong>: Blank map - no features displayed. <strong>Text</strong>: &quot;'We live encompassed with people...'&quot;.</p>
+<p>1 - INTRODUCTION</p>
+<p>1.1 <strong>Display</strong>: Indigenous &amp; European settlements and placenames [Mitchell 1755]. <strong>Title</strong>: &quot;Introduction&quot;.</p>
+<p>1.2 <strong>Display</strong>: (unchanged). <strong>Text</strong>: “Maps of early America do not tell the whole truth ...”</p>
+<p>1.3 <strong>Display</strong>: European settlements [Mitchell 1755]. <strong>Text</strong>: “Settlement was fragmented and confined to a narrow strip ...”.</p>
+<p>1.4 <strong>Display</strong>: Pathways, Indigenous &amp; European settlements [Mitchell 1755]. <strong>Text</strong>: “While the common worlds of ...”.</p>
+<p>2 - HOMELANDS</p>
+<p>2.0 <strong>Display</strong>: Selection of Indigenous-related annotations [Mitchell 1755], transforming from normalized spelling to Indigenous versions. <strong>Title</strong>: &quot;Homelands&quot;.</p>
+<p>2.1 <strong>Display</strong>: Pathways, Indigenous &amp; European settlements [Mitchell 1755]. <strong>Text</strong>: “American history begins with the deep history of the land ...”</p>
+<p>2.2 <strong>Display</strong>: Rivers [Mitchell 1755]; Indigenous &amp; European settlements and placenames [all maps]. <strong>Text</strong>: “The Indigenous landscape was more than a homeland ...”.</p>
+<p>2.3 <strong>Display</strong>: Principal rivers, Indigenous settlements, placenames and council fires [all maps]. <strong>Text</strong>: “The land was political ...”.</p>
+<p>2.4 <strong>Display</strong>: Charlestown [Mitchell 1755]; Catawba territory (source: https://native-land.ca/maps/territories/catawba/). <strong>Text</strong>: “Indigenous people were map makers ...”.</p>
+<p>2.5 <strong>Display</strong>: Haudenosaunee-related annotations [Mitchell 1755]. <strong>Text</strong>: “Haudenosaunee can be translated as ‘the whole house’ ...”.</p>
+<p>2.6 <strong>Display</strong>: Haudenosaunee-related annotation &quot;Iroquois&quot; and colonial domains Virginia, Pennsylvania, New York [Mitchell 1755]. <strong>Text</strong>: “British mapmakers took care in noting ...”.</p>
+<p>2.7 <strong>Display</strong>: as above + other Indigenous-related annotations [Mitchell 1755]. <strong>Text</strong>: “Yet this was not a wholly peaceful landscape ...”.</p>
+<p>2.8 <strong>Display</strong>: Indigenous settlements, principal rivers [all maps]. <strong>Text</strong>: “The United Colonies emerged as a new power ...”.</p>
+<p>2.9 <strong>Display</strong>: Indigenous &amp; European settlements, council fires [all maps]; Haudenosaunee-related annotations [Cary 1783, Bradley 1796]. <strong>Text</strong>: “The village worlds of the Haudenosaunee were broken apart ...”.</p>
+<p>3 - PATHWAYS</p>
+<p>3.0 <strong>Display</strong>: Two animations - principal rivers followed by pathway &amp; council fires  [Mitchell 1755]. <strong>Title</strong>: &quot;Pathways&quot;.</p>
+<p>3.1 <strong>Display</strong>: Pathways, Indigenous &amp; European settlements [Mitchell 1755]. <strong>Text</strong>: “For the Haudenosaunee, the path was a powerful metaphor ...”.</p>
+<p>3.2 <strong>Display</strong>:  Pathways, principal rivers [all maps]; Indigenous &amp; European settlements [Mitchell 1755]. <strong>Text</strong>:“Pathways were conduits of communication ...”.</p>
+<p>3.3 <strong>Display</strong>: Pathways, Indigenous &amp; European settlements [Mitchell 1755]. <strong>Text</strong>: “For the geographer Lewis Evans ...”.</p>
+<p>3.4 <strong>Display</strong>: Rivers [Bradley 1796]; Indigenous &amp; European settlements [Mitchell 1755]. <strong>Text</strong>: “Washington found himself serving as a messenger ...”.</p>
+<p>3.5 <strong>Display</strong>: Rivers [Bradley 1796]. <strong>Text</strong>: “As Washington learned, rivers were the highways ...”.</p>
+<p>3.6 <strong>Display</strong>: Rivers, pathways [Bradley 1796]. <strong>Text</strong>: “Europeans found their way along single file ...”.</p>
+<p>4 - VILLAGERS, SETTLERS</p>
+<p>4.0 <strong>Display</strong>: Animation of council fire sites [Mitchell 1755]. <strong>Title</strong>: &quot;Villagers, Settlers&quot;.</p>
+<p>4.1 <strong>Display</strong>: Indigenous settlements and placenames [Foster 1677]. <strong>Text</strong>: “European claims to the conquest of the ‘new world’ ...”.</p>
+<p>4.2 <strong>Display</strong>: Indigenous settlements [White 1590]. <strong>Text</strong>: “The English settled among Indigenous nations ...”.</p>
+<p>4.3 <strong>Display</strong>: Hudson River, Indigenous &amp; European settlements [Foster 1677]. <strong>Text</strong>: “A century after the creation of White’s map ...&quot;.</p>
+<p>4.4 <strong>Display</strong>: Principal rivers, Haudenosaunee settlements [all maps]. <strong>Text</strong>: “The creation of new colonies disrupted the flows ...”</p>
+<p>4.5 <strong>Display</strong>: Principal rivers, Indigenous &amp; European settlements [Evans 1752]. <strong>Text</strong>: “Settlers pushed out of towns and villages  ...”.</p>
+<p>4.6 <strong>Display</strong>: Border lines [Mitchell 1755]. <strong>Text</strong>: “As British traders, diplomats and settlers ...”.</p>
+<p>4.7 <strong>Display</strong>: Border lines [Buell 1784]. <strong>Text</strong>: “Increasingly, maps portrayed colonies as ...”.</p>
+<p>4.8 <strong>Display</strong>: Mississippi River system, Indigenous settlements [Mitchell 1755, Hutchins 1778]. <strong>Text</strong>: “Jefferies map is concerned with larger spaces ...”.</p>
+<p>4.9 <strong>Display</strong>: Pathways, Indigenous &amp; European settlements, council fires [Bradley 1796]. <strong>Text</strong>: “Abraham Bradley’s <em>A Map of the United State</em>s* shows ...”.</p>
+<p>5 - LINES</p>
+<p>5.0 <strong>Display</strong>: Four animations of expanding border lines [Seller 1676; Burghers 1738; Mitchell 1755; Bradley 1796]. <strong>Title</strong>: &quot;Lines&quot;.</p>
+<p>5.1 <strong>Display</strong>: Virginia [Mitchell 1755]. <strong>Text</strong>: “The royal charters that created colonies out of ...”.</p>
+<p>5.2 <strong>Display</strong>: Colonial domains [Burghers 1738]. <strong>Text</strong>: “As settlement expanded into the western reaches ...”.</p>
+<p>5.3 <strong>Display</strong>: Pathways, descriptions, European settlements [Evans 1752]. <strong>Text</strong>: “The most detailed maps focused on areas ...”.</p>
+<p>5.4 <strong>Display</strong>: Indigenous settlements, colonial domains [Mitchell 1755]. <strong>Text</strong>: “William Herbert’s ‘new’ and ‘accurate’ map ...”.</p>
+<p>5.5 <strong>Display</strong>: European, Indigenous and Haudenosaunee-related annotations [Mitchell 1755]. <strong>Text</strong>: “The charter borders of colonies are shown at scale ...”.</p>
+<p>5.6 <strong>Display</strong>: Colonial domains [Burghers 1738] with 1763 Royal Proclamation line added. <strong>Text</strong>: “The Royal Proclamation of 1763 created ...”.</p>
+<p>5.7 <strong>Display</strong>: (unchanged). <strong>Text</strong>: “A letter in the St. James’ Chronicle ...”.</p>
+<p>5.8 <strong>Display</strong>: Colonial border lines [all maps]. <strong>Text</strong>: “Later maps used European treaties to produce ...&quot;.</p>
+<p>5.9 <strong>Display</strong>: Colonial border lines [Buell 1784]. <strong>Text</strong>: “Where colonies sat near Indigenous nations ...”.</p>
+<p>5.10 <strong>Display</strong>: Connecticut [Buell 1784]. <strong>Text</strong>: “The transition between British Empire and American territorial republic ...”.</p>
+<p>5.11<strong>Display</strong>: Colonial border lines [Bradley 1796], Indigenous settlements [Mitchell 1755]. <strong>Text</strong>: “The names and location of Indigenous nations ...”.</p>
 
             </div>
 
