deploy: a4dfe0bd95cb883793adc085d5882ce78786023b

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-29 12:15 -->
+    <!-- Built with 11ty - 2024-10-29 16:32 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>About the project | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1730204156">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1730219557">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1730204156"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1730219557"></script>
 
     <style>
 
@@ -94,7 +94,7 @@
 <p>We wanted to be able to show not only the layers of information that were presented in maps of North America over time, but also how  historic maps consistently revealed the juxtaposition of Native and colonial presence. Since no database existed for this, our first task was to build one. To do this we selected a range of historic maps that, to us, provided the best respresentations of common worlds; these were geo-rectified over a base map and then data points from each map were selected and recorded. These data points included settlements and placenames, both Indigenous and European, as well as rivers and land pathways. A consistent feature of these early maps is that Indigenous homelands are represented by printed words and phrases but their physical extent, unlike that of colonies, are not demarcated by boundary lines. This is starkly illustrated in the image below (an excerpt from John Mitchell's iconic map of 1755). Numerous words and phrases indicate areas associated with particular peoples and Native Nations, and the map's largest label - which arcs across the centre of the map, is 'The Six Nations, or Iroquois'. In the absence of printed boundaries we captured the mapmakers' understandings of the relative locations of Native nations and peoples by recording the position and extent of the associated text segments on the map. It is important to realise, then, that when our map displays a polygon with the associated text &quot;Senekas&quot; this polygon is not delimiting a geographical area but rather the position and alignment of a printed word on the map.</p>
 <p><img src="../assets/img/about/Image_for_about_page.jpg" alt="Detail from Mitchell 1755 map" class="map_page_image"></p>
 <h2>Using the kinetic map</h2>
-<p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images - see <strong>Stories guide</strong> below for display details). The second mode allows you to explore freely, using a set of filters to see information captured from specific maps.</p>
+<p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images - see <strong>Stories guide</strong> below for display details. The second mode allows you to explore freely, using a set of filters to see information captured from specific maps.</p>
 <h2>The Project Team</h2>
 <p>This project is part of 'Brightening the Covenant Chain: Revealing Cultures of Diplomacy between the Crown and the Iroquois Confederacy'. Arts and Humanities Research Council of the United Kingdom, Standard Research Grant AH/T006099/1, Principal Investigator: Professor Joy Porter. Project Team: Charles Prior (project lead, author of map stories); Dr Matthias Wong (PDRA - data mining); Jenson Morse (Project Intern); King’s Digital Lab (Paul Caton, Neil Jakeman, Elliot Hall, Tiffany Ong, Lucie Hao); Project review held at RAI with input from panel: Max Edelson, Chad Anderson, Hayden Haynes (Seneca Nation), Saliha Belmessous, Cassie Wise, Miriam Davis Rosenbaum (National Indian Education Association).</p>
 <h2>Stories guide</h2>
@@ -148,7 +148,7 @@
 <p>5.8 <strong>Display</strong>: Colonial border lines [all maps]. <strong>Text</strong>: “Later maps used European treaties to produce ...&quot;.</p>
 <p>5.9 <strong>Display</strong>: Colonial border lines [Buell 1784]. <strong>Text</strong>: “Where colonies sat near Indigenous nations ...”.</p>
 <p>5.10 <strong>Display</strong>: Connecticut [Buell 1784]. <strong>Text</strong>: “The transition between British Empire and American territorial republic ...”.</p>
-<p>5.11<strong>Display</strong>: Colonial border lines [Bradley 1796], Indigenous settlements [Mitchell 1755]. <strong>Text</strong>: “The names and location of Indigenous nations ...”.</p>
+<p>5.11 <strong>Display</strong>: Colonial border lines [Bradley 1796], Indigenous settlements [Mitchell 1755]. <strong>Text</strong>: “The names and location of Indigenous nations ...”.</p>
 
             </div>
 
