--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-12-10 11:53 -->
+    <!-- Built with 11ty - 2024-12-10 16:47 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>About the project | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/bcc-11ty/assets/img/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1733831585">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1733849273">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1733831585"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1733849273"></script>
 
     <style>
 
@@ -41,7 +41,7 @@
 <header>
 <nav>
     <div id="mainmenu">
-        <a id="sitetitle" href="/"><span>Movement and Common Worlds in Early America</span><div class="subtitle">Homelands, Pathways and the Peoples of the Northeast</div></a>
+        <a id="sitetitle" href="/bcc-11ty/"><span>Movement and Common Worlds in Early America</span><div class="subtitle">Homelands, Pathways and the Peoples of the Northeast</div></a>
         <input id="menu" type="checkbox"/>
         <!--<img src="/bcc-11ty/assets/img/icons/font-awesome/bars-solid.svg"/>-->
         <label class="menu" role="button" for="menu">Menu</label>
