deploy: cf9783a674550a16796e87e30fbf874001d4e780

--- a/resources/index.html
+++ b/resources/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2025-01-14 16:50 -->
+    <!-- Built with 11ty - 2025-01-20 14:19 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,12 +14,12 @@
     <title>Resources | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/bcc-11ty/assets/img/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1736873429">
+    <link rel="stylesheet" href="/bcc-11ty/assets/css/style.css?ts=1737382770">
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/bcc-11ty/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
     <!-- Goat counter analytics -->
-    <script data-goatcounter="https://kdl.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1736873429"></script>
+    <script data-goatcounter="https://treatiedspaces.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script src="/bcc-11ty/assets/js/navbar-toggle.js?ts=1737382770"></script>
 
     <style>
 
