deploy: 342a057e67ba0cbaa018540cbfad849161839aaa

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2025-02-19 14:38 -->
+    <!-- Built with 11ty - 2025-02-19 16:39 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,12 +14,12 @@
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/img/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1739975926">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1739983145">
     <link rel="stylesheet" href="/assets/vendor/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="/assets/vendor/leaflet-dvf/dist/css/dvf.css">
     <!-- Goat counter analytics -->
     <script data-goatcounter="https://treatiedspaces.goatcounter.com/count" async="" src="//gc.zgo.at/count.js"></script>
-    <script src="/assets/js/navbar-toggle.js?ts=1739975926"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1739983145"></script>
 
     <style>
 
@@ -585,9 +585,9 @@
     let storyURIs = {
         storyFrame: "/assets/json/BCC_storyframe.json",
         slides: "/assets/json/BCC_slides.json",
-        lines: "/assets/json/BCC_lines.json",
-        points: "/assets/json/BCC_points.json",
-        polys: "/assets/json/BCC_polys.json",
+        lines: "/assets/json/BCC_lines.json.gz",
+        points: "/assets/json/BCC_points.json.gz",
+        polys: "/assets/json/BCC_polys.json.gz",
         indigenous: "/assets/json/indigenous_territories.json",
         homelands: "/assets/json/BCC_homelands.json",
 
